# vllm_with_ui

./: .gitignore  COMPLETE_CODE_FOR_LLM_GEN.md  Dockerfile  README.md  pyproject.toml  server.py
data/: ui_state.json
docs/: POST_PROCESSOR_ARCHITECTURE.md  UI_COMPONENT_ARCHITECTURE_PROPOSAL.md  UI_UX_IMPROVEMENT_PLAN.md  UI_UX_PROGRESS_REPORT.md
examples/postman/: vllm_pool_generate_chat_examples.postman_collection.json
scripts/: run.sh
vllm_pool/: main.py  tui.py
vllm_pool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vllm_pool/api/: models.py  router_events.py  router_generate.py  router_start.py  router_status.py  router_ui_state.py
vllm_pool/core/: config.py  llm_client.py  pool.py  post_processor.py  types.py  ui_state_store.py  worker.py
vllm_pool/ui/static/: app.js  styles.css
vllm_pool/ui/static/app/: main.js
vllm_pool/ui/static/app/adapters/: requests.js  responses.js
vllm_pool/ui/static/app/controllers/: generationController.js  modelController.js  scriptBuilderController.js  uiStateController.js
vllm_pool/ui/static/app/services/: apiClient.js  jobPollingService.js  loggerService.js  sseClient.js  storageService.js
vllm_pool/ui/static/app/stores/: appStore.js  createStore.js  generateStore.js  jobStore.js  modelStore.js  uiStateStore.js
vllm_pool/ui/static/app/tests/: adapters.test.mjs  script_builder_controller.test.mjs  services_and_validators.test.mjs  stores.test.mjs
vllm_pool/ui/static/app/validators/: formValidators.js
vllm_pool/ui/templates/: index.html
vllm_pool/utils/: logging.py
(+6 files in other folders)
