[project]
name = "vllm-pool"
version = "0.1.0"
description = "vLLM pool with per-GPU SSE tails and clean model/generate separation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "torch>=2.1.0",
    "vllm>=0.5.3",
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
